--- a/templates/base.html
+++ b/templates/base.html
@@ -63,7 +63,8 @@
       <div class="col-right">
         <h1 class="section-title">What is <span>Image</span> Classification?</h1>
         <h2>Classify Object</h2>
-        <p>In Active Map Image Classification we trained model from the ImageNet dataset which contains a thousand classes with multiple images to classify image objects. Image Interpretability is the main concern for image classification, detection, In order to improve accuracy GRAD-CAM is the best method to localize objects in an image with high accuracy. GRAD-CAM utilizes the VGG model to give an output of object with actively mapping of that particular object.</p>
+        <p>We will propose a technique for making Convolutional Neural Network (CNN)-based models more transparent by visualizing the regions of input that are "important" for predictions from these models - or visual explanations. In this technique, we will make  model Image Classification.
+Example :- In classification, If one image contain any traffic signal, and we need to classify that signal so that time we need to just upload image in our model it will shows that predicated answer of that signal using already trained model using open source library TensorFlow.</p>
       </div>
     </div>
   </section>
